force-app/main/default/objects/System_Settings__c/System_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Object to hold what types of messages to log and how long to keep them for</description>
    <label>System_Settings</label>
</CustomObject>