force-app/main/default/objects/System_Settings__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True – log errors in this org</description>
    <label>Error</label>
    <type>Checkbox</type>
</CustomField>