force-app/main/default/objects/System_Settings__c/fields/Log_Purge_Days__c.field-meta.xml
<CustomField>
    <fullName>Log_Purge_Days__c</fullName>
    <description>The number of days of logs to keep</description>
    <label>Log Purge (Days)</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>