force-app/main/default/objects/System_Settings__c/fields/Warning__c.field-meta.xml
<CustomField>
    <fullName>Warning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True – log warning messages in this org</description>
    <label>Warning</label>
    <type>Checkbox</type>
</CustomField>